lang/perl/mobirc: Checking in changes prior to tagging of version 0.04.  Changelog diff is:
=== Changes
==================================================================
--- Changes	(revision 20875)
+++ Changes	(local)
@@ -1,5 +1,10 @@
 Revision history for Perl extension Sledge::Authorizer::BasicAuth
 
+0.04
+
+    - use Module::Install
+    - depend to Class::Component
+
 0.03  Thu Jun 22 20:46:27 JST 2006
         - bug in empty password orz...
         - added test cases


git-svn-id: http://svn.coderepos.org/share/lang/perl/Sledge-Authorizer-BasicAuth/trunk@13933 d0d07461-0603-4401-acd4-de1884942a52

--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Revision history for Perl extension Sledge::Authorizer::BasicAuth
 
+0.04
+
+    - use Module::Install
+    - depend to Class::Component
+
 0.03  Thu Jun 22 20:46:27 JST 2006
         - bug in empty password orz...
         - added test cases
