Checking in changes prior to tagging of version 0.05.
Changelog diff is:

diff --git a/Changes b/Changes
index 1746312..18b4fb9 100644
--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Perl extension Sledge::Authorizer::BasicAuth

+0.05
+
+    - modernized package with M::B
+
 0.04

     - use Module::Install

--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Perl extension Sledge::Authorizer::BasicAuth
 
+0.05
+
+    - modernized package with M::B
+
 0.04
 
     - use Module::Install
