Checking in changes prior to tagging of version 0.07.
Changelog diff is:

diff --git a/Changes b/Changes
index 555cac4..d593936 100644
--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Perl extension Sledge::Authorizer::BasicAuth

+0.07
+
+    - fixed testing deps
+
 0.06

     - modernized package with M::B

--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Perl extension Sledge::Authorizer::BasicAuth
 
+0.07
+
+    - fixed testing deps
+
 0.06
 
     - modernized package with M::B
